--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "nodemon src/main.js"
+    "start": "node src/main.js"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
